--- a/src/Shopsys/ShopBundle/Resources/views/Admin/Content/PromoCode/newMassGenerate.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Admin/Content/PromoCode/newMassGenerate.html.twig
@@ -1,4 +1,4 @@
-{% extends '@ShopsysShop/Admin/Content/PromoCode/detail.html.twig' %}
+{% extends '@!ShopsysFramework/Admin/Content/PromoCode/detail.html.twig' %}
 
 {% block title %}- {{ 'Hromadné vytvoření slevových kupónů'|trans }}{% endblock %}
 {% block h1 %}{{ 'Hromadné vytvoření slevových kupónů'|trans }}{% endblock %}
