added support to display date-time values in different timezones
- see https://github.com/shopsys/shopsys/pull/1343
- PromoCode::$validFrom/$validTo and BlogArticle::$publishDate columns types changed to datetime
	- see the last paragraph of https://docs.shopsys.com/en/8.1/introduction/working-with-date-time-values/
- added DateTimeFormatterExtension::formatDateCore that uses Twig core date function and passes there timezone obtained from DisplayTimeZoneProvider

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Article/detail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Article/detail.html.twig
@@ -20,7 +20,7 @@
     <div class="web__line">
         <div class="web__container web__container--big-padding">
             <div class="in-article__container">
-                <div class="in-article__date">{{ article.createdAt|date('j.n.Y') }}</div>
+                <div class="in-article__date">{{ article.createdAt|formatDate }}</div>
 
                 <div class="in-article__text in-user-text">
                     {{ article.text|raw }}
