--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Error/error.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Error/error.html.twig
@@ -36,6 +36,9 @@
                         <div class="box-promo-image__content__description">
                             {{ 'Uh-oh, uh-oh. And specially <strong>"%status_code% %status_text%"</strong>, as if it was on purpose!'|transHtml({ '%status_code%': status_code, '%status_text%': status_text }) }}<br>
                             {{ 'Please excuse this error, we are working on fixing it. If needed, contact us on %mail% or by phone %phone%.'|trans({ '%mail%': getShopInfoEmail(), '%phone%': getShopInfoPhoneNumber() }) }}
+                            <br>
+                            <br>
+                            Error ID: <span id="js-error-id">{{ '{{ERROR_ID}}' }}</span>
                         </div>
                         <div class="box-promo-image__content__button">
                             <a href="{{ url('front_homepage') }}" class="btn btn--secondary">{{ 'Pokračujte na úvodní stránku'|trans }}</a>
