--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Cart/index.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Cart/index.html.twig
@@ -91,7 +91,7 @@
                                                     <span class="form-input-spinbox js-spinbox">
                                                         {{ form_widget(form.quantities[cartItem.id], { attr: {
                                                             class: 'form-input-spinbox__input input-no-style js-spinbox-input',
-                                                            'data-spinbox-min': cartItem.product.minimumAmount,
+                                                            'data-spinbox-min': cartItem.product.realMinimumAmount,
                                                             'data-spinbox-step': cartItem.product.amountMultiplier
                                                         }}) }}
                                                         <div class="btn-no-style form-input-spinbox__btn js-spinbox-plus"><i class="svg svg-plus"></i></div>
