Slovak texts fixes.

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Search/autocomplete.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Search/autocomplete.html.twig
@@ -16,7 +16,7 @@
                     </li>
                 {% else %}
                     <li class="search-hint__category__empty">
-                        {{ 'Vyhledávání neodpovídá žádna kategorie'|trans }}
+                        {{ 'Vyhledávání neodpovídá žádná kategorie'|trans }}
                     </li>
                 {% endfor %}
             </ul>
