--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Login/windowForm.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Login/windowForm.html.twig
@@ -26,6 +26,6 @@
 </div>
 <div class="box-login__social">
     <div class="box-login__social__title box-login__social__title--without-buttons">
-        <a href="{{ url('front_registration_register') }}" class="box-login__social__title__link underline">{{ 'Registruj se'|trans }}</a>
+        <a href="{{ url('front_registration_register') }}" class="box-login__social__title__link underline">{{ 'Registrujte se'|trans }}</a>
     </div>
 </div>
