Highlighted active blog categories in list of categories when browsing blog categories and blog articles.

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/blog.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/blog.less
@@ -102,6 +102,11 @@
             text-transform: uppercase;
             border-radius: @radius;
 
+            &.active {
+                background-color: @color-gray;
+                color: @color-f;
+            }
+
             &:last-child {
                 margin-bottom: 0;
             }
