--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Article/detail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Article/detail.html.twig
@@ -42,7 +42,7 @@
                 </div>
                 <div class="box-blog__panel">
                     <div class="box-blog__section">
-                        {{ render(controller('ShopsysShopBundle:Front/BlogCategory:list')) }}
+                        {{ render(controller('ShopsysShopBundle:Front/BlogCategory:list', {blogArticle: blogArticle})) }}
                     </div>
                 </div>
             </div>
