--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Category/detail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Category/detail.html.twig
@@ -68,7 +68,7 @@
                     </div>
                     <div class="box-blog__panel">
                         <div class="box-blog__section">
-                            {{ render(controller('ShopsysShopBundle:Front/BlogCategory:list')) }}
+                            {{ render(controller('ShopsysShopBundle:Front/BlogCategory:list', {blogCategory: blogCategory})) }}
                         </div>
                     </div>
                 </div>
