--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/gallery.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/gallery.less
@@ -120,8 +120,9 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    width: 23px;
-                    height: 23px;
+                    padding-left: 2px;
+                    width: 30px;
+                    height: 30px;
                     top: 50%;
                     left: 50%;
                     transform: translate(-50%, -50%);
