Removed new line from finished order loyalty club text because it didn't look good.

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Order/sent.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Order/sent.html.twig
@@ -34,7 +34,7 @@
                             <div class="box-order-done__club__text">
                                 {{ 'Jako člen Věrnostního programu budete mít přístup k'|trans }}
                                 <strong>{{ 'historii svých objednávek,'|trans }}</strong>
-                                {{ 'možnost získat'|trans }} <br>
+                                {{ 'možnost získat'|trans }}
                                 {{ '25 let záruku zdarma, objednat směnnou zásilku nebo '|trans }}
                                 <strong>{{ 'získat 3% slevu'|trans }}</strong>
                                 {{ 'na celý sortiment'|trans }}.
