--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/main.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/main.less
@@ -84,6 +84,7 @@
 @import "components/list/articles.less";
 @import "components/list/articles-blog.less";
 @import "components/list/article-main.less";
+@import "components/list/article-product.less";
 @import "components/list/articles-small.less";
 @import "components/list/basket-additionals.less";
 @import "components/list/benefits.less";
