--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Article/detail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Article/detail.html.twig
@@ -44,6 +44,14 @@
                     <div class="box-blog__section">
                         {{ render(controller('ShopsysShopBundle:Front/BlogCategory:list', {blogArticle: blogArticle})) }}
                     </div>
+                    <div class="box-blog__section">
+                        <div class="box-blog__products">
+                            <div class="box-blog__products__title">
+                                {{ 'V článku píšeme o těchto produktech'|trans }}
+                            </div>
+                            {{ render(controller('ShopsysShopBundle:Front/BlogArticle:products', {blogArticle: blogArticle})) }}
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -80,9 +88,8 @@
         </div>
 
     </div>
-
+</div>
     {% block last_visited_products %}
         {{ render(controller('ShopsysShopBundle:Front/LastVisitedProducts:show')) }}
     {% endblock %}
-</div>
 {% endblock %}
