--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/detail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/detail.html.twig
@@ -23,7 +23,7 @@
         <div class="web__container">
             <div itemscope itemtype="http://schema.org/Product">
                 <div class="js-product-variant-group">
-                    {{ boxDetail.productBox(product, allVariants, productMainCategory, true, mainVariants, youtubeDetail, productSizeArticleId, bushmanClubArticle, accessories, accessoriesHeadline, productVisibleProductCategoryDomains) }}
+                    {{ boxDetail.productBox(product, allVariants, productMainCategory, true, mainVariants, youtubeDetails, productSizeArticleId, bushmanClubArticle, accessories, accessoriesHeadline, productVisibleProductCategoryDomains) }}
 
                     {% for mainVariant in mainVariants if mainVariant.id != product.id %}
                         {{ boxDetail.productBox(mainVariant, allVariants, productMainCategory, false, mainVariants, youtubeDetailForMainVariants[mainVariant.id], productSizeArticleId, bushmanClubArticle, accessories, accessoriesHeadline, productVisibleProductCategoryDomains) }}
