--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/boxTabs.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/boxTabs.html.twig
@@ -4,7 +4,7 @@
     productMainCategory,
     visible,
     mainVariants,
-    youtubeDetail,
+    youtubeDetails,
     productSizeArticleId,
     accessories,
     accessoriesHeadline,
@@ -13,6 +13,7 @@
     {% set domain = getDomain() %}
     {% set descriptionHeadline = 'Popis'|trans %}
     {% set parametersHeadline = 'Parametry'|trans %}
+    {% set videosHeadline = 'Videa'|trans %}
 
     {% set productParameterValues = getProductParameterValues(product) %}
     {% if product.getDescription(domain.id)
@@ -35,9 +36,26 @@
                                     <p>
                                         {{ product.getDescription(domain.id)|raw }}
                                     </p>
+                                {% endif %}
+                            </div>
+                        </div>
+                    {% endif %}
 
-                                    {% if youtubeDetail is not null %}
-                                        <div class="youtubeWrapper">
+                    {% if youtubeDetails %}
+                        <div id="video">
+                            <div class="in-tab__content__title js-tabs-button active" data-tab-id="videos">
+                                <a href="#" class="in-tab__content__title__link underline">
+                                    {{ videosHeadline }}
+                                </a>
+                                <i class="svg svg-triangle"></i>
+                            </div>
+                            <div class="in-tab__content__item js-tabs-content active" data-tab-id="videos">
+                                <div class="in-user-text" itemprop="videos">
+                                    <h3 class="in-user-text__title">
+                                        {{ videosHeadline }}
+                                    </h3>
+                                    {% for youtubeDetail in youtubeDetails %}
+                                        <div class="youtubeWrapper margin-bottom-10">
                                             <iframe
                                                     width="560"
                                                     height="315"
@@ -46,11 +64,12 @@
                                                     allowfullscreen
                                             ></iframe>
                                         </div>
-                                    {% endif %}
-                                {% endif %}
+                                    {% endfor %}
+                                </div>
                             </div>
                         </div>
                     {% endif %}
+
                 </div>
 
                 <div class="in-tab__content__right">
