--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/article-main.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/article-main.less
@@ -1,7 +1,7 @@
 @list-article-main-content-bg: @color-gray-dark;
 @list-article-main-image-width: 293px;
 @list-article-main-image-height: 293px;
-@list-article-main-button-max-width: 172px;
+@list-article-main-button-max-width: 178px;
 @list-article-main-item-gap: 20px;
 @list-article-main-bottom-gap: 26px;
 
@@ -97,6 +97,7 @@
 
                 &__button {
                     max-width: @list-article-main-button-max-width;
+                    padding: 0 20px;
 
                     text-transform: uppercase;
                     font-size: @font-size-small;
