--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Article/blogArticleProducts.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Article/blogArticleProducts.html.twig
@@ -1,2 +1,2 @@
 {% import '@ShopsysShop/Front/Content/Product/productListMacro.html.twig' as productList %}
-{{ productList.verticalList(articleProducts, 'list-article-product', 'h3') }}
+{{ productList.verticalList(articleProducts, 'list-article-product', 'a') }}
