--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/blog.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/blog.less
@@ -58,6 +58,13 @@
 
         border: 3px solid @color-border;
         border-radius: @radius;
+
+        &__title {
+            margin-bottom: 15px;
+            
+            font-weight: 700;
+            font-size: @font-size-big;
+        }
     }
 
     &__title {
