--- a/src/Shopsys/ShopBundle/Resources/views/Front/Inline/Common/domainSelector.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Inline/Common/domainSelector.html.twig
@@ -18,51 +18,51 @@
     {% endif %}
     <li class="list-languages__item">
         <img class="list-languages__item__image" src="{{ asset('/assets/frontend/images/flags/poland.png') }}" alt="{{ 'Polska'|trans }}">
-        <a class="list-languages__item__link underline" href="https://de.bushmanwear.com/">
+        <a class="list-languages__item__link underline" href="{{ findUrlByDomainId('front_homepage', [], 3)}}">
             {{ 'Polska'|trans }}
         </a>
     </li>
     {% if isGermanyDomain() is same as (false) %}
         <li class="list-languages__item">
             <img class="list-languages__item__image" src="{{ asset('/assets/frontend/images/flags/germany.png') }}" alt="{{ 'Deutschland'|trans }}">
-            <a class="list-languages__item__link underline" href="https://de.bushmanwear.com/">
+            <a class="list-languages__item__link underline" href="{{ findUrlByDomainId('front_homepage', [], 3)}}">
                 {{ 'Deutschland'|trans }}
             </a>
         </li>
     {% endif %}
     <li class="list-languages__item">
         <img class="list-languages__item__image" src="{{ asset('/assets/frontend/images/flags/austria.png') }}" alt="{{ 'Österreich'|trans }}">
-        <a class="list-languages__item__link underline" href="https://de.bushmanwear.com/">
+        <a class="list-languages__item__link underline" href="{{ findUrlByDomainId('front_homepage', [], 3)}}">
             {{ 'Österreich'|trans }}
         </a>
     </li>
     <li class="list-languages__item">
         <img class="list-languages__item__image" src="{{ asset('/assets/frontend/images/flags/italy.png') }}" alt="{{ 'Italia'|trans }}">
-        <a class="list-languages__item__link underline" href="https://de.bushmanwear.com/">
+        <a class="list-languages__item__link underline" href="{{ findUrlByDomainId('front_homepage', [], 3)}}">
             {{ 'Italia'|trans }}
         </a>
     </li>
     <li class="list-languages__item">
         <img class="list-languages__item__image" src="{{ asset('/assets/frontend/images/flags/netherlands.png') }}" alt="{{ 'Nederland'|trans }}">
-        <a class="list-languages__item__link underline" href="https://de.bushmanwear.com/">
+        <a class="list-languages__item__link underline" href="{{ findUrlByDomainId('front_homepage', [], 3)}}">
             {{ 'Nederland'|trans }}
         </a>
     </li>
     <li class="list-languages__item">
         <img class="list-languages__item__image" src="{{ asset('/assets/frontend/images/flags/belgium.png') }}" alt="{{ 'Belgien'|trans }}">
-        <a class="list-languages__item__link underline" href="https://de.bushmanwear.com/">
+        <a class="list-languages__item__link underline" href="{{ findUrlByDomainId('front_homepage', [], 3)}}">
             {{ 'Belgien'|trans }}
         </a>
     </li>
     <li class="list-languages__item">
         <img class="list-languages__item__image" src="{{ asset('/assets/frontend/images/flags/luxembourg.png') }}" alt="{{ 'Lëtzebuerg'|trans }}">
-        <a class="list-languages__item__link underline" href="https://de.bushmanwear.com/">
+        <a class="list-languages__item__link underline" href="{{ findUrlByDomainId('front_homepage', [], 3)}}">
             {{ 'Lëtzebuerg'|trans }}
         </a>
     </li>
     <li class="list-languages__item">
         <img class="list-languages__item__image" src="{{ asset('/assets/frontend/images/flags/hungary.png') }}" alt="{{ 'Magyarország'|trans }}">
-        <a class="list-languages__item__link underline" href="https://de.bushmanwear.com/">
+        <a class="list-languages__item__link underline" href="{{ findUrlByDomainId('front_homepage', [], 3)}}">
             {{ 'Magyarország'|trans }}
         </a>
     </li>
