Removed club points from customer details. Changed pricing groups.

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/AboutUs/info.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/AboutUs/info.html.twig
@@ -38,7 +38,7 @@
                     <div class="box-contact__right__title">
                         {{ 'S čím potřebujete pomoct?'|trans }}
                     </div>
-                    {% include '@ShopsysShop/Front/Inline/Common/servicesArticlesList.html.twig' with { bushmanClubArticle: bushmanClubArticle } %}
+                    {% include '@ShopsysShop/Front/Inline/Common/servicesArticlesList.html.twig' with { loyaltyProgramArticle: loyaltyProgramArticle } %}
                 </div>
             </div>
             <div class="wrap-article">
