--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/boxDetail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/boxDetail.html.twig
@@ -1,4 +1,4 @@
-{% macro productBox(product, variants, productMainCategory, visible, mainVariants, youtubeDetails, productSizeArticleId, bushmanClubArticle, accessories, accessoriesHeadline, productVisibleProductCategoryDomains) %}
+{% macro productBox(product, variants, productMainCategory, visible, mainVariants, youtubeDetails, productSizeArticleId, loyaltyProgramArticle, accessories, accessoriesHeadline, productVisibleProductCategoryDomains) %}
     {% import '@ShopsysShop/Front/Inline/Product/productFlagsMacro.html.twig' as productFlags %}
     {% import '@ShopsysShop/Front/Content/Product/boxTabs.html.twig' as boxTabs %}
     {% set domain = getDomain() %}
