--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Stores/detail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Stores/detail.html.twig
@@ -38,7 +38,7 @@
                         {{ 'Jaké služby najdete'|trans }}<br>
                         {{ 'na prodejně?'|trans }}
                     </div>
-                    {% include '@ShopsysShop/Front/Inline/Common/servicesArticlesList.html.twig' with { bushmanClubArticle: bushmanClubArticle } %}
+                    {% include '@ShopsysShop/Front/Inline/Common/servicesArticlesList.html.twig' with { loyaltyProgramArticle: loyaltyProgramArticle } %}
                 </div>
             </div>
             <div class="wrap-article">
