--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Customer/edit.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Customer/edit.html.twig
@@ -33,38 +33,13 @@
                 <div class="wrap-box">
                     <h2 class="wrap-box__title">{{ 'Věrnostní program'|trans }}</h2>
                     <div class="wrap-box__in">
-                        {% if customer.memberOfBushmanClub %}
+                        {% if customer.memberOfLoyaltyProgram %}
                             {{ 'Jste členem Věrnostního programu'|trans }}
                         {% else %}
-                            {{ form_row(form.userData.memberOfBushmanClub, { label: 'Chci se stát členem Věrnostního programu'|trans}) }}
+                            {{ form_row(form.userData.memberOfLoyaltyProgram, { label: 'Chci se stát členem Věrnostního programu'|trans}) }}
                         {% endif %}
                     </div>
                 </div>
-
-                {#
-                TODO HIDDEN: https://app.yodiz.com/plan/pages/board.vz?cid=10273#/app/tk-36791
-
-                <div class="wrap-box">
-                    <h2 class="wrap-box__title">{{ 'Body ve Věrnostním programu'|trans }}</h2>
-                    <div class="wrap-box__in">
-                        <table class="table-main">
-                            <tbody>
-                                {% for bushmanClubPointPeriod in bushmanClubPointPeriods %}
-                                    <tr>
-                                        <td>
-                                            {{ bushmanClubPointPeriod.dateFrom|formatDate }} -
-                                            {{ bushmanClubPointPeriod.dateTo|formatDate }}
-                                        </td>
-                                        <td>
-                                            {{ bushmanClubPoints(customer.id, bushmanClubPointPeriod) }}
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                #}
 
                 <div class="wrap-box">
                     <h2 class="wrap-box__title">{{ 'Changing password'|trans }}</h2>
