--- a/src/Shopsys/ShopBundle/Resources/views/Front/Inline/Common/servicesArticlesList.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Inline/Common/servicesArticlesList.html.twig
@@ -13,7 +13,7 @@
             </li>
         {% endif %}
         <li class="list-simple__item list-simple__item--lighter">
-            <a href="{{ url('front_article_detail', { id: bushmanClubArticle.id }) }}" class="list-simple__item__link"><span class="underline-text">{{ 'Co je Věrnostní program?'|trans }}</span></a>
+            <a href="{{ url('front_article_detail', { id: loyaltyProgramArticle.id }) }}" class="list-simple__item__link"><span class="underline-text">{{ 'Co je Věrnostní program?'|trans }}</span></a>
         </li>
     </ul>
 </div>
