Business Validation fixes.

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/AboutUs/info.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/AboutUs/info.html.twig
@@ -75,7 +75,7 @@
                             <div class="wrap-article__row__half">
                                 {{ 'Shopsys s.r.o.'|trans }}<br>
                                 {{ 'Koksární 1096/10, 702 00 Ostrava'|trans }}<br>
-                                {{ 'IČ: 27790487, DIČ: CZ27790487'|trans }}<br>
+                                {{ 'IČO: 27790487, DIČ: CZ27790487'|trans }}<br>
                             </div>
                             <div class="wrap-article__row__half">
                                 {{ 'Spisová značka C 51890 vedená u rejstříkového soudu v Ostravě.'|trans }}
