--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/in/free-transport.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/in/free-transport.less
@@ -25,7 +25,7 @@
             text-align: center;
 
             font-weight: 700;
-            color: @color-green;
+            color: @color-black;
         }
 
         .in-free-transport--dark & {
